minor adjustments